kubernetes/rss2kindle-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss2kindle-api
  labels:
    app: rss2kindle-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss2kindle-api
  template:
    metadata:
      labels:
        app: rss2kindle-api
    spec:
      containers:
      - name: rss2kindle-api
        image: rss2kindle/api:3.3
        ports:
        - containerPort: 8443
