kubernetes/rss2kindle-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss2kindle-web
  labels:
    app: rss2kindle-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss2kindle-web
  template:
    metadata:
      labels:
        app: rss2kindle-web
    spec:
      containers:
      - name: rss2kindle-web
        image: rss2kindle/web:3.3
        ports:
        - containerPort: 8443
