kubernetes/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailhog
  name: mailhog
spec:
  type: NodePort
  ports:
    - name: http
      port: 8025
      targetPort: 8025
      nodePort: 30021
      protocol: TCP
    - name: smtp
      port: 1025
      targetPort: 1025
      protocol: TCP
  selector:
    app: mailhog
