kubernetes/rss2kindle-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rss2kindle-api
  name: rss2kindle-api
  annotations:
    cloud.google.com/app-protocols: '{"https":"HTTPS"}'
spec:
  type: NodePort
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 30022
      protocol: TCP
  selector:
    app: rss2kindle-api
