kubernetes/rss2kindle-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rss2kindle-web
  name: rss2kindle-web
spec:
  type: LoadBalancer
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: rss2kindle-web
