kubernetes/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myingressroute
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`smtp.localhost`)
    kind: Rule
    services:
    - name: mailhog
      port: 8025
